--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,18 @@ flutter:
    - images/xm.jpg
    - images/yz2.jpg
    - images/zjj.jpg
+   - images/spring.jpg
+   - images/summer.jpg
+   - images/autumn.jpg
+   - images/winter.jpg
+   - images/hkmt.jpg
+   - images/central.jpg
+   - images/east.jpg
+   - images/south.jpg
+   - images/north.jpg
+   - images/northeast.jpg
+   - images/southwest.jpg
+   - images/northwest.jpg
    - images/2.0x/dali.jpg
    - images/2.0x/qinghai.jpg
    - images/2.0x/tianjin.jpg
@@ -117,6 +129,18 @@ flutter:
    - images/2.0x/xm.jpg
    - images/2.0x/yz2.jpg
    - images/2.0x/zjj.jpg
+   - images/2.0x/spring.jpg
+   - images/2.0x/summer.jpg
+   - images/2.0x/autumn.jpg
+   - images/2.0x/winter.jpg
+   - images/2.0x/hkmt.jpg
+   - images/2.0x/central.jpg
+   - images/2.0x/east.jpg
+   - images/2.0x/south.jpg
+   - images/2.0x/north.jpg
+   - images/2.0x/northeast.jpg
+   - images/2.0x/southwest.jpg
+   - images/2.0x/northwest.jpg
    - images/3.0x/dali.jpg
    - images/3.0x/qinghai.jpg
    - images/3.0x/tianjin.jpg
@@ -154,6 +178,18 @@ flutter:
    - images/3.0x/xm.jpg
    - images/3.0x/yz2.jpg
    - images/3.0x/zjj.jpg
+   - images/3.0x/spring.jpg
+   - images/3.0x/summer.jpg
+   - images/3.0x/autumn.jpg
+   - images/3.0x/winter.jpg
+   - images/3.0x/hkmt.jpg
+   - images/3.0x/central.jpg
+   - images/3.0x/east.jpg
+   - images/3.0x/south.jpg
+   - images/3.0x/north.jpg
+   - images/3.0x/northeast.jpg
+   - images/3.0x/southwest.jpg
+   - images/3.0x/northwest.jpg
    - images/4.0x/dali.jpg
    - images/4.0x/qinghai.jpg
    - images/4.0x/tianjin.jpg
@@ -191,30 +227,42 @@ flutter:
    - images/4.0x/xm.jpg
    - images/4.0x/yz2.jpg
    - images/4.0x/zjj.jpg
-   
+   - images/4.0x/spring.jpg
+   - images/4.0x/summer.jpg
+   - images/4.0x/autumn.jpg
+   - images/4.0x/winter.jpg
+   - images/4.0x/hkmt.jpg
+   - images/4.0x/central.jpg
+   - images/4.0x/east.jpg
+   - images/4.0x/south.jpg
+   - images/4.0x/north.jpg
+   - images/4.0x/northeast.jpg
+   - images/4.0x/southwest.jpg
+   - images/4.0x/northwest.jpg
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
 
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
+ # An image asset can refer to one or more resolution-specific "variants", see
+ # https://flutter.dev/assets-and-images/#resolution-aware.
 
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+ # For details regarding adding assets from package dependencies, see
+ # https://flutter.dev/assets-and-images/#from-packages
+
+ # To add custom fonts to your application, add a fonts section here,
+ # in this "flutter" section. Each entry in this list should have a
+ # "family" key with the font family name, and a "fonts" key with a
+ # list giving the asset and other descriptors for the font. For
+ # example:
+ # fonts:
+ #   - family: Schyler
+ #     fonts:
+ #       - asset: fonts/Schyler-Regular.ttf
+ #       - asset: fonts/Schyler-Italic.ttf
+ #         style: italic
+ #   - family: Trajan Pro
+ #     fonts:
+ #       - asset: fonts/TrajanPro.ttf
+ #       - asset: fonts/TrajanPro_Bold.ttf
+ #         weight: 700
+ #
+ # For details regarding fonts from package dependencies,
+ # see https://flutter.dev/custom-fonts/#from-packages
