--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,9 @@ flutter:
    - images/northeast.jpg
    - images/southwest.jpg
    - images/northwest.jpg
+   - images/lsl.jpg
+   - images/zyx.jpg
+   - images/sxb.jpg
    - images/2.0x/dali.jpg
    - images/2.0x/qinghai.jpg
    - images/2.0x/tianjin.jpg
@@ -143,6 +146,9 @@ flutter:
    - images/2.0x/southwest.jpg
    - images/2.0x/northwest.jpg
    - images/2.0x/mylogo.jpg
+   - images/2.0x/lsl.jpg
+   - images/2.0x/zyx.jpg
+   - images/2.0x/sxb.jpg
    - images/3.0x/dali.jpg
    - images/3.0x/qinghai.jpg
    - images/3.0x/tianjin.jpg
@@ -193,6 +199,9 @@ flutter:
    - images/3.0x/southwest.jpg
    - images/3.0x/northwest.jpg
    - images/3.0x/mylogo.jpg
+   - images/3.0x/lsl.jpg
+   - images/3.0x/zyx.jpg
+   - images/3.0x/sxb.jpg
    - images/4.0x/dali.jpg
    - images/4.0x/qinghai.jpg
    - images/4.0x/tianjin.jpg
@@ -243,6 +252,9 @@ flutter:
    - images/4.0x/southwest.jpg
    - images/4.0x/northwest.jpg
    - images/4.0x/mylogo.jpg
+   - images/4.0x/lsl.jpg
+   - images/4.0x/zyx.jpg
+   - images/4.0x/sxb.jpg
 
 
  # An image asset can refer to one or more resolution-specific "variants", see
